--- a/configs/WRLinux9/combos-WRLINUX_9_LTS_CVE.yaml
+++ b/configs/WRLinux9/combos-WRLINUX_9_LTS_CVE.yaml
@@ -4,7 +4,7 @@
   - wrlinux-image-glibc-small
   name: qemuarm_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -17,7 +17,7 @@
   - wrlinux-image-glibc-small
   name: qemuppc_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -30,7 +30,7 @@
   - wrlinux-image-glibc-small
   name: qemumips64_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -43,7 +43,7 @@
   - wrlinux-image-glibc-small
   name: qemumips_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -56,7 +56,7 @@
   - wrlinux-image-glibc-small
   name: qemux86-64_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -69,7 +69,7 @@
   - wrlinux-image-glibc-small
   name: qemuarma9_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -82,7 +82,7 @@
   - wrlinux-image-glibc-small
   name: qemuarm64_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -95,7 +95,7 @@
   - wrlinux-image-glibc-small
   name: qemux86_glibc-small_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux-small
@@ -108,7 +108,7 @@
   - wrlinux-image-glibc-core
   name: qemuarm_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -121,7 +121,7 @@
   - wrlinux-image-glibc-std
   name: qemuarm_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -134,7 +134,7 @@
   - wrlinux-image-glibc-core
   name: qemuppc_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -147,7 +147,7 @@
   - wrlinux-image-glibc-std
   name: qemuppc_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -160,7 +160,7 @@
   - wrlinux-image-glibc-core
   name: qemumips64_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -173,7 +173,7 @@
   - wrlinux-image-glibc-std
   name: qemumips64_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -186,7 +186,7 @@
   - wrlinux-image-glibc-core
   name: qemumips_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -199,7 +199,7 @@
   - wrlinux-image-glibc-std
   name: qemumips_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -212,7 +212,7 @@
   - wrlinux-image-glibc-core
   name: qemux86-64_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -225,7 +225,7 @@
   - wrlinux-image-glibc-std
   name: qemux86-64_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -238,7 +238,7 @@
   - wrlinux-image-glibc-core
   name: qemuarma9_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -251,7 +251,7 @@
   - wrlinux-image-glibc-std
   name: qemuarma9_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -264,7 +264,7 @@
   - wrlinux-image-glibc-core
   name: qemuarm64_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -277,7 +277,7 @@
   - wrlinux-image-glibc-std
   name: qemuarm64_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -290,7 +290,7 @@
   - wrlinux-image-glibc-core
   name: qemux86_glibc-core_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
@@ -303,7 +303,7 @@
   - wrlinux-image-glibc-std
   name: qemux86_glibc-std_LTS
   prebuild:
-  - notconfigure.sh
+  - build_configure.sh
   - --enable-bootimage=ext4
   setup:
   - --distro=wrlinux
